--- a/resources/lang/de/Text.properties
+++ b/resources/lang/de/Text.properties
@@ -1,2 +1,3 @@
 ; LoginPage
 mainFooterText = Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643
+loginTextDescription = Unsere Angebote richten sich ausschließlich an Händler. Wenn Sie noch keine Zugangsdaten haben, registrieren Sie sich bitte mit Ihren Firmendaten. Wir schalten Sie nach Prüfung Ihrer Angaben frei und senden Ihnen eine eMail.
